@@ -141,6 +141,7 @@
 ||ariswebay.club^
 ||as558.org^
 ||as8899.com^
+||asdo.fun^
 ||asfg781q2.space^
 ||asgapi.one^
 ||asosasia.com^
@@ -183,6 +184,7 @@
 ||biasyoga.com^
 ||big-money-rush.com^
 ||bingohome.xyz^
+||bio.site^
 ||bit-exvavo.com^
 ||bitly.ws^
 ||biury.space^
@@ -550,6 +552,7 @@
 ||gugufund.com^
 ||guhailaoniu.com^
 ||guminluntan.com^
+||guniswap.top^
 ||guntests.lt.acemlnb.com^
 ||guopiao.shop^
 ||gushidaren.club^
@@ -664,6 +667,7 @@
 ||ironfanmarketing.com^
 ||isgdanismanligi.com.tr^
 ||isnotdomain440059159.com^
+||itradesoeasy.com^
 ||ivenor.tw^
 ||ivideo247.com^
 ||iwmqa.asia^
@@ -910,6 +914,7 @@
 ||nmiang.online^
 ||nngg.asia^
 ||noahpb.club^
+||nodielec.com^
 ||nslfs.shop^
 ||nsrgov.com^
 ||nstock.tw^
@@ -1190,6 +1195,7 @@
 ||tenclass.io^
 ||tenclass.net^
 ||terryfu.com^
+||tesseract222.top^
 ||tfhfinssra.com^
 ||tfporg.lt.acemlnb.com^
 ||thea.buzz^
@@ -1307,6 +1313,7 @@
 ||tysq.club^
 ||tzxy.life^
 ||u-ho-shop.com^
+||uchdk.top^
 ||ucxgov.com^
 ||ufrsa.shop^
 ||uhongm.site^
@@ -1355,6 +1362,7 @@
 ||vszxm.com^
 ||vtigov.com^
 ||vuhnvf.bond^
+||vuniswapx1.top^
 ||vvcsgd.asia^
 ||vxbdjhs37543.com^
 ||wa55.net^
@@ -1423,6 +1431,8 @@
 ||wyd2.com.tw^
 ||wzold.site^
 ||x68x.cn^
+||x97fax.live^
+||x97med.live^
 ||xc-bet.com^
 ||xdfaus.cn^
 ||xe2w.com^
@@ -1433,6 +1443,7 @@
 ||xlxxl.store^
 ||xn--299a.xn--3e0b707e^
 ||xn--ghq10gmvi961at1b479e.com^
+||xn--nosa.club^
 ||xnmzaa.asia^
 ||xnuzxwm.com^
 ||xone1dd.xyz^
