@@ -1,5 +1,10 @@
 # 歷史更新 History Update
 
+* 20230424 Update
+  * 更新 個人不想看的廣告或網站
+  * 更新 FB網友提供清單
+  * 調整 LineBot
+
 * 20230423 Update
   * 更新 個人不想看的廣告或網站
   * 更新 FB網友提供清單
